--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-	"name": "NodejsStarterApp",
-	"version": "0.0.1",
-	"description": "A sample nodejs app for Bluemix",
-	"scripts": {
-		"start": "node app.js"
-	},
-	"dependencies": {
-		"express": "3.4.7",
-		"jade": "1.1.4"	
-	},
-	"engines": {
-		"node": "0.10.*"
-	},
-	"repository": {}
+  "name": "NodejsStarterApp",
+  "version": "0.0.1",
+  "description": "A sample nodejs app for Bluemix",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.12.2",
+    "express": "3.4.7",
+    "jade": "1.1.4"
+  },
+  "engines": {
+    "node": "0.10.*"
+  },
+  "repository": {}
 }
