--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "body-parser": "^1.12.2",
     "express": "3.4.7",
-    "jade": "1.1.4"
+    "jade": "1.1.4",
+    "watson-developer-cloud-alpha": "^0.10.8"
   },
   "engines": {
     "node": "0.10.*"
